tests/syntax_error/first_line_indent.jou
    def foo() -> void:  # Error: expected an expression, got more indentation
    return

# TODO: this error message is not very good...
